fixed links alignment

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ img {
 
 ul {
     display: flex;
+    align-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
